--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
+    "pdf": "^0.1.0",
     "pdfkit": "^0.11.0"
   }
 }
